Started implementing player vs bot mode

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,1 @@
-/App.class
-/Game.class
-/GamePanel$1.class
-/GamePanel$2.class
-/GamePanel.class
-/GridEvent.class
-/GridListener.class
-/MenuFrame.class
-/TTTButton.class
-/TTTGrid.class
-/UI.class
+/MyConstants.class
